[package]
name = "lending-interest"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
soroban-sdk = { workspace = true }
lending-types = { path = "../lending-types" }
stellarlend-safe-math = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
default = []
